--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&display=swap" rel="stylesheet">
-    <title>Contact Us</title>
+    <title>About Us</title>
     <style>
         body {
             font-family: 'Lato', sans-serif;
@@ -16,10 +16,23 @@
     <title>About Us</title>
 </head>
 <body>
+    <div class=" h-[53px] relative bg-stone-300"></div>
     <div class="left-[568.50px] top-[88px] absolute gap-[52px] inline-flex">
         <div>Home</div>
         <div  class="font-bold">About us</div>
         <div>Contact</div>
+    </div>
+    <img src="/images/postive-caring-relationships-teachers 1.png" class="w-full h-[530px] bg-black bg-opacity-20 mt-24">
+    <div class="w-[663px] h-[207px]  bg-transparent absolute flex-col -my-96 mx-96">
+        <div class="text-8xl text-center font-bold text-white ">About Us</div>
+        <div class="w-[663px] text-center text-white text-2xl font-semibold  mt-8"> From preschool to pre-tertiary, our students enjoy fun, interactive and relevant lessons and are empowered to think beyond the confines of the classroom.<br/></div>
+        <div class="w-[135px] h-10 p-2.5 bg-yellow-300 rounded-[10px] justify-center items-center gap-2.5 inline-flex ml-72 mt-8">
+            <div class="text-center text-black text-lg font-semibold ">See More</div>
+        </div>
+
+    </div>
+    <div class=" bg-yellow-500">
+        <div class="left-[574px] top-[700px] absolute text-black text-[45px] font-semibold ">Why it’s works</div>
     </div>
     
 </body>
